@@ -1,22 +1,23 @@
 cmake_minimum_required(VERSION 2.6.0)
+
+include(FindSWIG)
 # This module finds an installed SWIG. It sets the following variables:
 # SWIG_FOUND - set to true if SWIG is found
 # SWIG_DIR - the directory where swig is installed
 # SWIG_EXECUTABLE - the path to the swig executable
 # SWIG_VERSION   - the version number of the swig executable
-include(FindSWIG)
-# Defines the following macros:
-# SWIG_ADD_MODULE(name language [ files ])
-#     - Define swig module with given name and specified language
-# SWIG_LINK_LIBRARIES(name [ libraries ])
-#     - Link libraries to swig module
-include(UseSWIG)
 
 find_package(SWIG)
 if (NOT SWIG_FOUND)
   message(STATUS "SWIG NOT found")
   return()
 endif (NOT SWIG_FOUND)
+message(STATUS "SWIG version is ${SWIG_VERSION}")
+if (NOT ${SWIG_VERSION} EQUAL "1.3.40")
+  message(STATUS "SWIG version 1.3.40 exactly is required")
+  return()
+endif (NOT ${SWIG_VERSION} EQUAL "1.3.40")
+
 
 ###################
 # Python
@@ -38,45 +39,38 @@ include_directories(
     ${PYTHON_INCLUDE_PATH}
 )
 
-# python bindings
-set_source_files_properties(openbabel-python.i PROPERTIES CPLUSPLUS ON)
-set(CMAKE_SWIG_FLAGS -small -O -python -templatereduce -naturalvar)
-swig_add_module(_openbabel c++ openbabel-python.i)
-swig_link_libraries(_openbabel openbabel ${PYTHON_LIBRARIES})
+add_custom_command(OUTPUT openbabel-python.cpp openbabel.py
+    COMMAND ${SWIG_EXECUTABLE} -python -c++ -small -O -templatereduce -naturalvar -I${CMAKE_SOURCE_DIR}/include -I${CMAKE_BINARY_DIR}/include -o openbabel-python.cpp ${CMAKE_SOURCE_DIR}/scripts/openbabel-python.i
+    MAIN_DEPENDENCY openbabel-python.i
+)
 
 if(NOT WIN32)
-add_custom_command(TARGET _openbabel POST_BUILD 
-    COMMAND ${CMAKE_COMMAND} -E echo "import sys" > ob.py
-    COMMAND ${CMAKE_COMMAND} -E echo "if sys.platform.find('linux'\) != -1:" >> ob.py
-    COMMAND ${CMAKE_COMMAND} -E echo "  try:" >> ob.py
-    COMMAND ${CMAKE_COMMAND} -E echo "    import dl" >> ob.py
-    COMMAND ${CMAKE_COMMAND} -E echo "  except ImportError:" >> ob.py
-    COMMAND ${CMAKE_COMMAND} -E echo "    import DLFCN as dl" >> ob.py
-    COMMAND ${CMAKE_COMMAND} -E echo "  sys.setdlopenflags(sys.getdlopenflags() | dl.RTLD_GLOBAL)" >> ob.py
-    COMMAND cat openbabel.py >> ob.py
-    COMMAND ${CMAKE_COMMAND} -E copy ob.py openbabel.py
-    COMMAND ${CMAKE_COMMAND} -E remove ob.py
-    VERBATIM)
+    add_custom_target(_openbabel ALL
+        COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/scripts/python/setup.py build
+        DEPENDS openbabel-python.cpp
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/scripts
+    )
+    add_custom_command(TARGET _openbabel POST_BUILD 
+        COMMAND ${CMAKE_COMMAND} -E echo "import sys" > ob.py
+        COMMAND ${CMAKE_COMMAND} -E echo "if sys.platform.find('linux'\) != -1:" >> ob.py
+        COMMAND ${CMAKE_COMMAND} -E echo "  try:" >> ob.py
+        COMMAND ${CMAKE_COMMAND} -E echo "    import dl" >> ob.py
+        COMMAND ${CMAKE_COMMAND} -E echo "  except ImportError:" >> ob.py
+        COMMAND ${CMAKE_COMMAND} -E echo "    import DLFCN as dl" >> ob.py
+        COMMAND ${CMAKE_COMMAND} -E echo "  sys.setdlopenflags(sys.getdlopenflags() | dl.RTLD_GLOBAL)" >> ob.py
+        COMMAND cat openbabel.py >> ob.py
+        COMMAND ${CMAKE_COMMAND} -E copy ob.py openbabel.py
+        COMMAND ${CMAKE_COMMAND} -E remove ob.py
+        VERBATIM)
+
+    install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/scripts/python/setup.py install --prefix=${CMAKE_INSTALL_PREFIX} WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/scripts)")
+
+else(NOT WIN32)
+    add_library(_openbabel MODULE openbabel-python.cpp)
+    target_link_libraries(_openbabel ${PYTHON_LIBRARIES} ${BABEL_LIBRARY})
+    set_target_properties(_openbabel PROPERTIES
+        OUTPUT_NAME _openbabel
+        PREFIX ""
+        SUFFIX .pyd )
 endif(NOT WIN32)
 
-# find site-packages dir...
-if(NOT PYTHON_PREFIX)
-  execute_process(COMMAND ${PYTHON_EXECUTABLE} -c 
-    "from sys import stdout; from distutils import sysconfig; stdout.write(sysconfig.get_python_lib())"
-    OUTPUT_VARIABLE PYTHON_LIB_PATH)
-  message(STATUS "Python site-packages directory: ${PYTHON_LIB_PATH}")
-else(NOT PYTHON_PREFIX)
-  set(PYTHON_LIB_PATH ${PYTHON_PREFIX})
-endif(NOT PYTHON_PREFIX)
-
-# Find Python major version and use the correct version of Pybel
-execute_process(COMMAND ${PYTHON_EXECUTABLE} -c
-  "from sys import stdout, version; stdout.write(version[0])"
-  OUTPUT_VARIABLE PYTHON_VER)
-message(STATUS "Python major version: ${PYTHON_VER}")
-add_custom_command(TARGET _openbabel POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/python/pybel_py${PYTHON_VER}.x.py ${CMAKE_CURRENT_BINARY_DIR}/pybel.py)
-
-install(TARGETS _openbabel DESTINATION ${PYTHON_LIB_PATH})
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/openbabel.py ${CMAKE_CURRENT_BINARY_DIR}/pybel.py
-        DESTINATION ${PYTHON_LIB_PATH})
